Added new endpoint for gpt chat file uploads, will need to make seperate ui for pdf, image, etc uploads
